2007-10-29  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* CardElement.m ([CardElement -value:anInt]): added handling for
	quoted-printable, base64 and 8bit encoding attributes.

2007-08-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* iCalRecurrenceRule.m ([iCalRecurrenceRule
	-valueForFrequency:value]): returns NSNotFound whenever the
	frequency text has a length of 0.
	([iCalRecurrenceRule -byDayMask]): return an empty mask whenever
	the "byday" value has a length of 0.

2007-02-12  Helge Hess  <helge.hess@opengroupware.org>
 
	* iCalMonthlyRecurrenceCalculator.m: fixed byday calculation for days
	which overflow the number of days in a month. Should fix OGo bug
	#1829. (v4.7.79)
	
2007-07-10  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* iCalToDo.m ([iCalToDo -setDue:newDueDate]): use setDateTime:
	instead of setDate: because the latter sets an "all day"
	timestamp.

2007-07-03  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* iCalRecurrenceRule.m ([iCalRecurrenceRule
	+recurrenceRuleWithICalRepresentation:_iCalRep]): the
	representation is generally a series of values separated by a ";".
	Therefore we need to split those values and feed them one by one.
	([iCalRecurrenceRule -weekDayFromICalRepresentation:_day]): return
	-1 instead of raising an exception if the week day could not be
	recognized.

	* CardElement.m ([CardElement -versitString]): remove the ending
	"\r\n".

2007-06-12  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* iCalDateTime.m ([iCalDateTime
	-_setDateTime:dateTimeforAllDayEntity:forAllDayEntity]): take the
	forAllDayEntity parameter into account when the date entity has a
	timezone.

	* iCalTimeZone.m ([iCalTimeZone -dateStringForDate:date]): new
	method that returns dates formatted for all day events.

2007-06-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* iCalDateTime.m ([iCalDateTime
	-_setDateTime:dateTimeforAllDayEntity:forAllDayEntity]):
	inverted the all day logic because all day dates where generated